--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Help me choose</title>
+		<link rel="stylesheet" href="./styles.css" type="text/css">
 	</head>
 	<body>
 		<h1>Help me choose between...</h1>
-		<img src="./Images/universe.jpg">
-		<div>
-			<div>
+		<div class="inputsection">
+			<div class="inputs">
 				<input placeholder="Something"></input>
 			</div>
-			<button>Add</button>
+			<button class="addOption" class="button">Add</button>
 		</div>
-		<button>Go!</button>
+		<button class="button">Go!</button>
 	</body>
 </html>
