--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		<link rel="stylesheet" href="./styles.css" type="text/css">
 	</head>
 	<body class="backgroundgradient">
-		<h1>Help me choose between...</h1>
+		<h1>Lunchdags, var ska vi gå och äta lunch idag?</h1>
 		<div class="inputsection">
 			<div class="inputs">
 				<input placeholder="Something"></input>
 			</div>
-			<button class="addOption button" >Add</button>
+			<button class="addOption button" >Lägg till lunchställe</button>
 		</div>
 		<div class="resultsection"></div>
 		<button class="submit button">Go!</button>
@@ -19,6 +19,7 @@
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script> 
 			$(function() {
+
 				$('.resultsection').hide()
 
 				var add_option = function() {
