--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<link rel="stylesheet" href="./styles.css" type="text/css">
 	</head>
 	<body class="backgroundgradient">
-		<h1>Lunchdags, var ska vi gå och äta lunch idag?</h1>
+		<h1>Lunchdags, var ska vi gå?</h1>
+		<img class="circletag" src="./Images/IMG_4557.JPG">
 		<div class="inputsection">
 			<div class="inputs">
 				<input placeholder="Something"></input>
@@ -14,7 +15,7 @@
 			<button class="addOption button" >Lägg till lunchställe</button>
 		</div>
 		<div class="resultsection"></div>
-		<button class="submit button">Go!</button>
+		<button class="submit button">Välj!</button>
 
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script> 
